uptime-kuma-prod-1/Service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  namespace: uptime-kuma-prod-1
  labels:
    app: uptime-kuma
spec:
  ports:
    - port: 3001
      targetPort: 3001
      name: http
  clusterIP: None
  selector:
    app: uptime-kuma
