uptime-kuma-prod-1/Ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma-prod-1
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime-kuma.prod-1.dev-software.pl`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
  tls:
    secretName: prod-1-dev-software-prod-tls
